# fast-sample

./: .dockerignore  .gitignore  CONSTANTS.py  README copy.md  README.md  apprunner.yaml  docker-compose.yml  dockerfile  main.py  procfile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
configs/: __init__.py  config.py  configs_readme.md
database/: __init__.py  clubs.py  utils.py
documentation/: ERDiag.drawio
external_endpoint/: __init__.py  memberships.py  qt_systems.py  refunds.py
internal/: __init__.py
internal/club/: statistics.py
log/: __init__.py  logging.py
routers/: __init__.py
routers/club/: statistics.py
schemas/: __init__.py  club.py
test/club/: test_league.py
utils/: __init__.py  currency.csv  currency.py  translation.json  translation.py
