[metadata]
name = Webportal-backend
description = The API will be used to serve the webportal frontend.
author = DS-ML Team, NeovoTech.
platforms = linux
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    configs
    database
    internal
    routers
    schemas
install_requires =
    fastapi>=0.88.0
    firebase-admin>=6.0.1
    pymongo>=4.3.3
    pyrebase4>=4.6.0
    uvicorn>=0.20.0
python_requires = >=3.7
package_dir = 
    =.
zip_safe = no

[options.extras_require]
testing = 
    black>=22.10.0
    flake8>=6.0.0
    mypy>=0.991
    pytest>=7.2.0
    pytest-cov>=4.0
    tox>=3.27.1

[options.package_data]
config = py.typed
databse = py.typed
schemas = py.typed
users = py.typed

[flake8]
exclude = env, .tox
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 140
max-complexity = 18
select = B,C,E,F,W,T4,B9